// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Flex component > Align items > center 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _align-center_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Align items > flex-end 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _align-end_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Align items > flex-start 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _align-start_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Align items > stretch 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _align-stretch_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Direction > column 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _dir-column_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Direction > row 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-1 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-1_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-2 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-2_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-3 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-3_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-4 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-4_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-5 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-5_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-6 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-6_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-7 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-7_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-8 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-8_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-9 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-9_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-10 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-10_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-11 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-11_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Gap > gap-12 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _gap-12_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Justify content > center 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _justify-center_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Justify content > flex-end 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _justify-end_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Justify content > flex-start 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _justify-start_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Justify content > space-around 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _justify-around_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Justify content > space-between 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _justify-between_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Wrap > no-wrap 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _wrap-nowrap_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex component > Wrap > wrap 1`] = `
<DocumentFragment>
  <div
    class="_flex_6eb20e _wrap-wrap_6eb20e"
  >
    <div
      class="_flex_6eb20e"
    >
      0
    </div>
    <div
      class="_flex_6eb20e"
    >
      1
    </div>
    <div
      class="_flex_6eb20e"
    >
      2
    </div>
    <div
      class="_flex_6eb20e"
    >
      3
    </div>
    <div
      class="_flex_6eb20e"
    >
      4
    </div>
    <div
      class="_flex_6eb20e"
    >
      5
    </div>
    <div
      class="_flex_6eb20e"
    >
      6
    </div>
    <div
      class="_flex_6eb20e"
    >
      7
    </div>
    <div
      class="_flex_6eb20e"
    >
      8
    </div>
    <div
      class="_flex_6eb20e"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;
